# Copyright (C) 2012-2015  CEA/DEN, EDF R&D, OPEN CASCADE
#
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2.1 of the License, or (at your option) any later version.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307 USA
#
# See http://www.salome-platform.org/ or email : webmaster.salome@opencascade.com
#

# --- options ---

# additional include directories
INCLUDE_DIRECTORIES(
  ${CAS_INCLUDE_DIRS}
  ${PROJECT_SOURCE_DIR}/src/FromOCCT/TKPShape
  ${PROJECT_SOURCE_DIR}/src/FromOCCT/PTKernel
  ${CMAKE_CURRENT_SOURCE_DIR}
)

# additional preprocessor / compiler flags
ADD_DEFINITIONS(
  ${CAS_DEFINITIONS}
  )

# libraries to link to
SET(_link_LIBRARIES
  ${CAS_TKernel} ${CAS_TKG2d}
  ${CAS_TKMath} ${CAS_TKCDF}
  TKPShape
  PTKernel
  )

# --- headers ---

SET(GEOM_HEADERS
  Handle_PCDMShape_Document.hxx
  PCDMShape_Document.hxx
  PCDMShape_Document.ixx
  PCDMShape_Document.jxx
  ShapeSchema_DBC_VArrayOfCharacter.hxx
  ShapeSchema_DBC_VArrayOfCharacter.ixx
  ShapeSchema_DBC_VArrayOfExtCharacter.hxx
  ShapeSchema_DBC_VArrayOfExtCharacter.ixx
  ShapeSchema_gp_Ax1.hxx
  ShapeSchema_gp_Ax1.ixx
  ShapeSchema_gp_Ax22d.hxx
  ShapeSchema_gp_Ax22d.ixx
  ShapeSchema_gp_Ax2d.hxx
  ShapeSchema_gp_Ax2d.ixx
  ShapeSchema_gp_Ax2.hxx
  ShapeSchema_gp_Ax2.ixx
  ShapeSchema_gp_Ax3.hxx
  ShapeSchema_gp_Ax3.ixx
  ShapeSchema_gp_Circ2d.hxx
  ShapeSchema_gp_Circ2d.ixx
  ShapeSchema_gp_Dir2d.hxx
  ShapeSchema_gp_Dir2d.ixx
  ShapeSchema_gp_Dir.hxx
  ShapeSchema_gp_Dir.ixx
  ShapeSchema_gp_Lin2d.hxx
  ShapeSchema_gp_Lin2d.ixx
  ShapeSchema_gp_Mat2d.hxx
  ShapeSchema_gp_Mat2d.ixx
  ShapeSchema_gp_Mat.hxx
  ShapeSchema_gp_Mat.ixx
  ShapeSchema_gp_Pnt2d.hxx
  ShapeSchema_gp_Pnt2d.ixx
  ShapeSchema_gp_Pnt.hxx
  ShapeSchema_gp_Pnt.ixx
  ShapeSchema_gp_Trsf2d.hxx
  ShapeSchema_gp_Trsf2d.ixx
  ShapeSchema_gp_Trsf.hxx
  ShapeSchema_gp_Trsf.ixx
  ShapeSchema_gp_Vec2d.hxx
  ShapeSchema_gp_Vec2d.ixx
  ShapeSchema_gp_Vec.hxx
  ShapeSchema_gp_Vec.ixx
  ShapeSchema_gp_XY.hxx
  ShapeSchema_gp_XY.ixx
  ShapeSchema_gp_XYZ.hxx
  ShapeSchema_gp_XYZ.ixx
  ShapeSchema.hxx
  ShapeSchema_ObjMgt_ExternRef.hxx
  ShapeSchema_ObjMgt_ExternRef.ixx
  ShapeSchema_ObjMgt_ExternShareable.hxx
  ShapeSchema_ObjMgt_ExternShareable.ixx
  ShapeSchema_ObjMgt_PSeqOfExtRef.hxx
  ShapeSchema_ObjMgt_PSeqOfExtRef.ixx
  ShapeSchema_ObjMgt_SeqNodeOfPSeqOfExtRef.hxx
  ShapeSchema_ObjMgt_SeqNodeOfPSeqOfExtRef.ixx
  ShapeSchema_PBRep_Curve3D.hxx
  ShapeSchema_PBRep_Curve3D.ixx
  ShapeSchema_PBRep_CurveOn2Surfaces.hxx
  ShapeSchema_PBRep_CurveOn2Surfaces.ixx
  ShapeSchema_PBRep_CurveOnClosedSurface.hxx
  ShapeSchema_PBRep_CurveOnClosedSurface.ixx
  ShapeSchema_PBRep_CurveOnSurface.hxx
  ShapeSchema_PBRep_CurveOnSurface.ixx
  ShapeSchema_PBRep_CurveRepresentation.hxx
  ShapeSchema_PBRep_CurveRepresentation.ixx
  ShapeSchema_PBRep_GCurve.hxx
  ShapeSchema_PBRep_GCurve.ixx
  ShapeSchema_PBRep_PointOnCurve.hxx
  ShapeSchema_PBRep_PointOnCurve.ixx
  ShapeSchema_PBRep_PointOnCurveOnSurface.hxx
  ShapeSchema_PBRep_PointOnCurveOnSurface.ixx
  ShapeSchema_PBRep_PointOnSurface.hxx
  ShapeSchema_PBRep_PointOnSurface.ixx
  ShapeSchema_PBRep_PointRepresentation.hxx
  ShapeSchema_PBRep_PointRepresentation.ixx
  ShapeSchema_PBRep_PointsOnSurface.hxx
  ShapeSchema_PBRep_PointsOnSurface.ixx
  ShapeSchema_PBRep_Polygon3D.hxx
  ShapeSchema_PBRep_Polygon3D.ixx
  ShapeSchema_PBRep_PolygonOnClosedSurface.hxx
  ShapeSchema_PBRep_PolygonOnClosedSurface.ixx
  ShapeSchema_PBRep_PolygonOnClosedTriangulation.hxx
  ShapeSchema_PBRep_PolygonOnClosedTriangulation.ixx
  ShapeSchema_PBRep_PolygonOnSurface.hxx
  ShapeSchema_PBRep_PolygonOnSurface.ixx
  ShapeSchema_PBRep_PolygonOnTriangulation.hxx
  ShapeSchema_PBRep_PolygonOnTriangulation.ixx
  ShapeSchema_PBRep_TEdge1.hxx
  ShapeSchema_PBRep_TEdge1.ixx
  ShapeSchema_PBRep_TEdge.hxx
  ShapeSchema_PBRep_TEdge.ixx
  ShapeSchema_PBRep_TFace1.hxx
  ShapeSchema_PBRep_TFace1.ixx
  ShapeSchema_PBRep_TFace.hxx
  ShapeSchema_PBRep_TFace.ixx
  ShapeSchema_PBRep_TVertex1.hxx
  ShapeSchema_PBRep_TVertex1.ixx
  ShapeSchema_PBRep_TVertex.hxx
  ShapeSchema_PBRep_TVertex.ixx
  ShapeSchema_PCDM_Document.hxx
  ShapeSchema_PCDM_Document.ixx
  ShapeSchema_PCDMShape_Document.hxx
  ShapeSchema_PCDMShape_Document.ixx
  ShapeSchema_PColgp_FieldOfHArray1OfCirc2d.hxx
  ShapeSchema_PColgp_FieldOfHArray1OfCirc2d.ixx
  ShapeSchema_PColgp_FieldOfHArray1OfDir2d.hxx
  ShapeSchema_PColgp_FieldOfHArray1OfDir2d.ixx
  ShapeSchema_PColgp_FieldOfHArray1OfDir.hxx
  ShapeSchema_PColgp_FieldOfHArray1OfDir.ixx
  ShapeSchema_PColgp_FieldOfHArray1OfLin2d.hxx
  ShapeSchema_PColgp_FieldOfHArray1OfLin2d.ixx
  ShapeSchema_PColgp_FieldOfHArray1OfPnt2d.hxx
  ShapeSchema_PColgp_FieldOfHArray1OfPnt2d.ixx
  ShapeSchema_PColgp_FieldOfHArray1OfPnt.hxx
  ShapeSchema_PColgp_FieldOfHArray1OfPnt.ixx
  ShapeSchema_PColgp_FieldOfHArray1OfVec2d.hxx
  ShapeSchema_PColgp_FieldOfHArray1OfVec2d.ixx
  ShapeSchema_PColgp_FieldOfHArray1OfVec.hxx
  ShapeSchema_PColgp_FieldOfHArray1OfVec.ixx
  ShapeSchema_PColgp_FieldOfHArray1OfXY.hxx
  ShapeSchema_PColgp_FieldOfHArray1OfXY.ixx
  ShapeSchema_PColgp_FieldOfHArray1OfXYZ.hxx
  ShapeSchema_PColgp_FieldOfHArray1OfXYZ.ixx
  ShapeSchema_PColgp_FieldOfHArray2OfCirc2d.hxx
  ShapeSchema_PColgp_FieldOfHArray2OfCirc2d.ixx
  ShapeSchema_PColgp_FieldOfHArray2OfDir2d.hxx
  ShapeSchema_PColgp_FieldOfHArray2OfDir2d.ixx
  ShapeSchema_PColgp_FieldOfHArray2OfDir.hxx
  ShapeSchema_PColgp_FieldOfHArray2OfDir.ixx
  ShapeSchema_PColgp_FieldOfHArray2OfLin2d.hxx
  ShapeSchema_PColgp_FieldOfHArray2OfLin2d.ixx
  ShapeSchema_PColgp_FieldOfHArray2OfPnt2d.hxx
  ShapeSchema_PColgp_FieldOfHArray2OfPnt2d.ixx
  ShapeSchema_PColgp_FieldOfHArray2OfPnt.hxx
  ShapeSchema_PColgp_FieldOfHArray2OfPnt.ixx
  ShapeSchema_PColgp_FieldOfHArray2OfVec2d.hxx
  ShapeSchema_PColgp_FieldOfHArray2OfVec2d.ixx
  ShapeSchema_PColgp_FieldOfHArray2OfVec.hxx
  ShapeSchema_PColgp_FieldOfHArray2OfVec.ixx
  ShapeSchema_PColgp_FieldOfHArray2OfXY.hxx
  ShapeSchema_PColgp_FieldOfHArray2OfXY.ixx
  ShapeSchema_PColgp_FieldOfHArray2OfXYZ.hxx
  ShapeSchema_PColgp_FieldOfHArray2OfXYZ.ixx
  ShapeSchema_PColgp_HArray1OfCirc2d.hxx
  ShapeSchema_PColgp_HArray1OfCirc2d.ixx
  ShapeSchema_PColgp_HArray1OfDir2d.hxx
  ShapeSchema_PColgp_HArray1OfDir2d.ixx
  ShapeSchema_PColgp_HArray1OfDir.hxx
  ShapeSchema_PColgp_HArray1OfDir.ixx
  ShapeSchema_PColgp_HArray1OfLin2d.hxx
  ShapeSchema_PColgp_HArray1OfLin2d.ixx
  ShapeSchema_PColgp_HArray1OfPnt2d.hxx
  ShapeSchema_PColgp_HArray1OfPnt2d.ixx
  ShapeSchema_PColgp_HArray1OfPnt.hxx
  ShapeSchema_PColgp_HArray1OfPnt.ixx
  ShapeSchema_PColgp_HArray1OfVec2d.hxx
  ShapeSchema_PColgp_HArray1OfVec2d.ixx
  ShapeSchema_PColgp_HArray1OfVec.hxx
  ShapeSchema_PColgp_HArray1OfVec.ixx
  ShapeSchema_PColgp_HArray1OfXY.hxx
  ShapeSchema_PColgp_HArray1OfXY.ixx
  ShapeSchema_PColgp_HArray1OfXYZ.hxx
  ShapeSchema_PColgp_HArray1OfXYZ.ixx
  ShapeSchema_PColgp_HArray2OfCirc2d.hxx
  ShapeSchema_PColgp_HArray2OfCirc2d.ixx
  ShapeSchema_PColgp_HArray2OfDir2d.hxx
  ShapeSchema_PColgp_HArray2OfDir2d.ixx
  ShapeSchema_PColgp_HArray2OfDir.hxx
  ShapeSchema_PColgp_HArray2OfDir.ixx
  ShapeSchema_PColgp_HArray2OfLin2d.hxx
  ShapeSchema_PColgp_HArray2OfLin2d.ixx
  ShapeSchema_PColgp_HArray2OfPnt2d.hxx
  ShapeSchema_PColgp_HArray2OfPnt2d.ixx
  ShapeSchema_PColgp_HArray2OfPnt.hxx
  ShapeSchema_PColgp_HArray2OfPnt.ixx
  ShapeSchema_PColgp_HArray2OfVec2d.hxx
  ShapeSchema_PColgp_HArray2OfVec2d.ixx
  ShapeSchema_PColgp_HArray2OfVec.hxx
  ShapeSchema_PColgp_HArray2OfVec.ixx
  ShapeSchema_PColgp_HArray2OfXY.hxx
  ShapeSchema_PColgp_HArray2OfXY.ixx
  ShapeSchema_PColgp_HArray2OfXYZ.hxx
  ShapeSchema_PColgp_HArray2OfXYZ.ixx
  ShapeSchema_PColgp_HSequenceOfDir.hxx
  ShapeSchema_PColgp_HSequenceOfDir.ixx
  ShapeSchema_PColgp_HSequenceOfPnt.hxx
  ShapeSchema_PColgp_HSequenceOfPnt.ixx
  ShapeSchema_PColgp_HSequenceOfVec.hxx
  ShapeSchema_PColgp_HSequenceOfVec.ixx
  ShapeSchema_PColgp_HSequenceOfXYZ.hxx
  ShapeSchema_PColgp_HSequenceOfXYZ.ixx
  ShapeSchema_PColgp_SeqNodeOfHSequenceOfDir.hxx
  ShapeSchema_PColgp_SeqNodeOfHSequenceOfDir.ixx
  ShapeSchema_PColgp_SeqNodeOfHSequenceOfPnt.hxx
  ShapeSchema_PColgp_SeqNodeOfHSequenceOfPnt.ixx
  ShapeSchema_PColgp_SeqNodeOfHSequenceOfVec.hxx
  ShapeSchema_PColgp_SeqNodeOfHSequenceOfVec.ixx
  ShapeSchema_PColgp_SeqNodeOfHSequenceOfXYZ.hxx
  ShapeSchema_PColgp_SeqNodeOfHSequenceOfXYZ.ixx
  ShapeSchema_PCollection_HAsciiString.hxx
  ShapeSchema_PCollection_HAsciiString.ixx
  ShapeSchema_PCollection_HExtendedString.hxx
  ShapeSchema_PCollection_HExtendedString.ixx
  ShapeSchema_PColStd_FieldOfHArray1OfInteger.hxx
  ShapeSchema_PColStd_FieldOfHArray1OfInteger.ixx
  ShapeSchema_PColStd_FieldOfHArray1OfReal.hxx
  ShapeSchema_PColStd_FieldOfHArray1OfReal.ixx
  ShapeSchema_PColStd_FieldOfHArray2OfReal.hxx
  ShapeSchema_PColStd_FieldOfHArray2OfReal.ixx
  ShapeSchema_PColStd_HArray1OfInteger.hxx
  ShapeSchema_PColStd_HArray1OfInteger.ixx
  ShapeSchema_PColStd_HArray1OfReal.hxx
  ShapeSchema_PColStd_HArray1OfReal.ixx
  ShapeSchema_PColStd_HArray2OfReal.hxx
  ShapeSchema_PColStd_HArray2OfReal.ixx
  ShapeSchema_PGeom2d_AxisPlacement.hxx
  ShapeSchema_PGeom2d_AxisPlacement.ixx
  ShapeSchema_PGeom2d_BezierCurve.hxx
  ShapeSchema_PGeom2d_BezierCurve.ixx
  ShapeSchema_PGeom2d_BoundedCurve.hxx
  ShapeSchema_PGeom2d_BoundedCurve.ixx
  ShapeSchema_PGeom2d_BSplineCurve.hxx
  ShapeSchema_PGeom2d_BSplineCurve.ixx
  ShapeSchema_PGeom2d_CartesianPoint.hxx
  ShapeSchema_PGeom2d_CartesianPoint.ixx
  ShapeSchema_PGeom2d_Circle.hxx
  ShapeSchema_PGeom2d_Circle.ixx
  ShapeSchema_PGeom2d_Conic.hxx
  ShapeSchema_PGeom2d_Conic.ixx
  ShapeSchema_PGeom2d_Curve.hxx
  ShapeSchema_PGeom2d_Curve.ixx
  ShapeSchema_PGeom2d_Direction.hxx
  ShapeSchema_PGeom2d_Direction.ixx
  ShapeSchema_PGeom2d_Ellipse.hxx
  ShapeSchema_PGeom2d_Ellipse.ixx
  ShapeSchema_PGeom2d_Geometry.hxx
  ShapeSchema_PGeom2d_Geometry.ixx
  ShapeSchema_PGeom2d_Hyperbola.hxx
  ShapeSchema_PGeom2d_Hyperbola.ixx
  ShapeSchema_PGeom2d_Line.hxx
  ShapeSchema_PGeom2d_Line.ixx
  ShapeSchema_PGeom2d_OffsetCurve.hxx
  ShapeSchema_PGeom2d_OffsetCurve.ixx
  ShapeSchema_PGeom2d_Parabola.hxx
  ShapeSchema_PGeom2d_Parabola.ixx
  ShapeSchema_PGeom2d_Point.hxx
  ShapeSchema_PGeom2d_Point.ixx
  ShapeSchema_PGeom2d_Transformation.hxx
  ShapeSchema_PGeom2d_Transformation.ixx
  ShapeSchema_PGeom2d_TrimmedCurve.hxx
  ShapeSchema_PGeom2d_TrimmedCurve.ixx
  ShapeSchema_PGeom2d_Vector.hxx
  ShapeSchema_PGeom2d_Vector.ixx
  ShapeSchema_PGeom2d_VectorWithMagnitude.hxx
  ShapeSchema_PGeom2d_VectorWithMagnitude.ixx
  ShapeSchema_PGeom_Axis1Placement.hxx
  ShapeSchema_PGeom_Axis1Placement.ixx
  ShapeSchema_PGeom_Axis2Placement.hxx
  ShapeSchema_PGeom_Axis2Placement.ixx
  ShapeSchema_PGeom_AxisPlacement.hxx
  ShapeSchema_PGeom_AxisPlacement.ixx
  ShapeSchema_PGeom_BezierCurve.hxx
  ShapeSchema_PGeom_BezierCurve.ixx
  ShapeSchema_PGeom_BezierSurface.hxx
  ShapeSchema_PGeom_BezierSurface.ixx
  ShapeSchema_PGeom_BoundedCurve.hxx
  ShapeSchema_PGeom_BoundedCurve.ixx
  ShapeSchema_PGeom_BoundedSurface.hxx
  ShapeSchema_PGeom_BoundedSurface.ixx
  ShapeSchema_PGeom_BSplineCurve.hxx
  ShapeSchema_PGeom_BSplineCurve.ixx
  ShapeSchema_PGeom_BSplineSurface.hxx
  ShapeSchema_PGeom_BSplineSurface.ixx
  ShapeSchema_PGeom_CartesianPoint.hxx
  ShapeSchema_PGeom_CartesianPoint.ixx
  ShapeSchema_PGeom_Circle.hxx
  ShapeSchema_PGeom_Circle.ixx
  ShapeSchema_PGeom_ConicalSurface.hxx
  ShapeSchema_PGeom_ConicalSurface.ixx
  ShapeSchema_PGeom_Conic.hxx
  ShapeSchema_PGeom_Conic.ixx
  ShapeSchema_PGeom_Curve.hxx
  ShapeSchema_PGeom_Curve.ixx
  ShapeSchema_PGeom_CylindricalSurface.hxx
  ShapeSchema_PGeom_CylindricalSurface.ixx
  ShapeSchema_PGeom_Direction.hxx
  ShapeSchema_PGeom_Direction.ixx
  ShapeSchema_PGeom_ElementarySurface.hxx
  ShapeSchema_PGeom_ElementarySurface.ixx
  ShapeSchema_PGeom_Ellipse.hxx
  ShapeSchema_PGeom_Ellipse.ixx
  ShapeSchema_PGeom_Geometry.hxx
  ShapeSchema_PGeom_Geometry.ixx
  ShapeSchema_PGeom_Hyperbola.hxx
  ShapeSchema_PGeom_Hyperbola.ixx
  ShapeSchema_PGeom_Line.hxx
  ShapeSchema_PGeom_Line.ixx
  ShapeSchema_PGeom_OffsetCurve.hxx
  ShapeSchema_PGeom_OffsetCurve.ixx
  ShapeSchema_PGeom_OffsetSurface.hxx
  ShapeSchema_PGeom_OffsetSurface.ixx
  ShapeSchema_PGeom_Parabola.hxx
  ShapeSchema_PGeom_Parabola.ixx
  ShapeSchema_PGeom_Plane.hxx
  ShapeSchema_PGeom_Plane.ixx
  ShapeSchema_PGeom_Point.hxx
  ShapeSchema_PGeom_Point.ixx
  ShapeSchema_PGeom_RectangularTrimmedSurface.hxx
  ShapeSchema_PGeom_RectangularTrimmedSurface.ixx
  ShapeSchema_PGeom_SphericalSurface.hxx
  ShapeSchema_PGeom_SphericalSurface.ixx
  ShapeSchema_PGeom_Surface.hxx
  ShapeSchema_PGeom_Surface.ixx
  ShapeSchema_PGeom_SurfaceOfLinearExtrusion.hxx
  ShapeSchema_PGeom_SurfaceOfLinearExtrusion.ixx
  ShapeSchema_PGeom_SurfaceOfRevolution.hxx
  ShapeSchema_PGeom_SurfaceOfRevolution.ixx
  ShapeSchema_PGeom_SweptSurface.hxx
  ShapeSchema_PGeom_SweptSurface.ixx
  ShapeSchema_PGeom_ToroidalSurface.hxx
  ShapeSchema_PGeom_ToroidalSurface.ixx
  ShapeSchema_PGeom_Transformation.hxx
  ShapeSchema_PGeom_Transformation.ixx
  ShapeSchema_PGeom_TrimmedCurve.hxx
  ShapeSchema_PGeom_TrimmedCurve.ixx
  ShapeSchema_PGeom_Vector.hxx
  ShapeSchema_PGeom_Vector.ixx
  ShapeSchema_PGeom_VectorWithMagnitude.hxx
  ShapeSchema_PGeom_VectorWithMagnitude.ixx
  ShapeSchema_PMMgt_PManaged.hxx
  ShapeSchema_PMMgt_PManaged.ixx
  ShapeSchema_PPoly_FieldOfHArray1OfTriangle.hxx
  ShapeSchema_PPoly_FieldOfHArray1OfTriangle.ixx
  ShapeSchema_PPoly_HArray1OfTriangle.hxx
  ShapeSchema_PPoly_HArray1OfTriangle.ixx
  ShapeSchema_PPoly_Polygon2D.hxx
  ShapeSchema_PPoly_Polygon2D.ixx
  ShapeSchema_PPoly_Polygon3D.hxx
  ShapeSchema_PPoly_Polygon3D.ixx
  ShapeSchema_PPoly_PolygonOnTriangulation.hxx
  ShapeSchema_PPoly_PolygonOnTriangulation.ixx
  ShapeSchema_PPoly_Triangle.hxx
  ShapeSchema_PPoly_Triangle.ixx
  ShapeSchema_PPoly_Triangulation.hxx
  ShapeSchema_PPoly_Triangulation.ixx
  ShapeSchema_PTopLoc_Datum3D.hxx
  ShapeSchema_PTopLoc_Datum3D.ixx
  ShapeSchema_PTopLoc_ItemLocation.hxx
  ShapeSchema_PTopLoc_ItemLocation.ixx
  ShapeSchema_PTopLoc_Location.hxx
  ShapeSchema_PTopLoc_Location.ixx
  ShapeSchema_PTopoDS_Compound.hxx
  ShapeSchema_PTopoDS_Compound.ixx
  ShapeSchema_PTopoDS_CompSolid.hxx
  ShapeSchema_PTopoDS_CompSolid.ixx
  ShapeSchema_PTopoDS_Edge.hxx
  ShapeSchema_PTopoDS_Edge.ixx
  ShapeSchema_PTopoDS_Face.hxx
  ShapeSchema_PTopoDS_Face.ixx
  ShapeSchema_PTopoDS_FieldOfHArray1OfHShape.hxx
  ShapeSchema_PTopoDS_FieldOfHArray1OfHShape.ixx
  ShapeSchema_PTopoDS_FieldOfHArray1OfShape1.hxx
  ShapeSchema_PTopoDS_FieldOfHArray1OfShape1.ixx
  ShapeSchema_PTopoDS_HArray1OfHShape.hxx
  ShapeSchema_PTopoDS_HArray1OfHShape.ixx
  ShapeSchema_PTopoDS_HArray1OfShape1.hxx
  ShapeSchema_PTopoDS_HArray1OfShape1.ixx
  ShapeSchema_PTopoDS_HShape.hxx
  ShapeSchema_PTopoDS_HShape.ixx
  ShapeSchema_PTopoDS_Shape1.hxx
  ShapeSchema_PTopoDS_Shape1.ixx
  ShapeSchema_PTopoDS_Shell.hxx
  ShapeSchema_PTopoDS_Shell.ixx
  ShapeSchema_PTopoDS_Solid.hxx
  ShapeSchema_PTopoDS_Solid.ixx
  ShapeSchema_PTopoDS_TCompound1.hxx
  ShapeSchema_PTopoDS_TCompound1.ixx
  ShapeSchema_PTopoDS_TCompound.hxx
  ShapeSchema_PTopoDS_TCompound.ixx
  ShapeSchema_PTopoDS_TCompSolid1.hxx
  ShapeSchema_PTopoDS_TCompSolid1.ixx
  ShapeSchema_PTopoDS_TCompSolid.hxx
  ShapeSchema_PTopoDS_TCompSolid.ixx
  ShapeSchema_PTopoDS_TEdge1.hxx
  ShapeSchema_PTopoDS_TEdge1.ixx
  ShapeSchema_PTopoDS_TEdge.hxx
  ShapeSchema_PTopoDS_TEdge.ixx
  ShapeSchema_PTopoDS_TFace1.hxx
  ShapeSchema_PTopoDS_TFace1.ixx
  ShapeSchema_PTopoDS_TFace.hxx
  ShapeSchema_PTopoDS_TFace.ixx
  ShapeSchema_PTopoDS_TShape1.hxx
  ShapeSchema_PTopoDS_TShape1.ixx
  ShapeSchema_PTopoDS_TShape.hxx
  ShapeSchema_PTopoDS_TShape.ixx
  ShapeSchema_PTopoDS_TShell1.hxx
  ShapeSchema_PTopoDS_TShell1.ixx
  ShapeSchema_PTopoDS_TShell.hxx
  ShapeSchema_PTopoDS_TShell.ixx
  ShapeSchema_PTopoDS_TSolid1.hxx
  ShapeSchema_PTopoDS_TSolid1.ixx
  ShapeSchema_PTopoDS_TSolid.hxx
  ShapeSchema_PTopoDS_TSolid.ixx
  ShapeSchema_PTopoDS_TVertex1.hxx
  ShapeSchema_PTopoDS_TVertex1.ixx
  ShapeSchema_PTopoDS_TVertex.hxx
  ShapeSchema_PTopoDS_TVertex.ixx
  ShapeSchema_PTopoDS_TWire1.hxx
  ShapeSchema_PTopoDS_TWire1.ixx
  ShapeSchema_PTopoDS_TWire.hxx
  ShapeSchema_PTopoDS_TWire.ixx
  ShapeSchema_PTopoDS_Vertex.hxx
  ShapeSchema_PTopoDS_Vertex.ixx
  ShapeSchema_PTopoDS_Wire.hxx
  ShapeSchema_PTopoDS_Wire.ixx
  ShapeSchema_Standard_Persistent.hxx
  ShapeSchema_Standard_Persistent.ixx
  )

# --- sources ---

SET(GEOM_SOURCES
  PCDMShape_Document.cxx
  ShapeSchema.cxx
  ShapeSchema_DBC_VArrayOfCharacter.cxx
  ShapeSchema_DBC_VArrayOfExtCharacter.cxx
  ShapeSchema_gp_Ax1.cxx
  ShapeSchema_gp_Ax22d.cxx
  ShapeSchema_gp_Ax2.cxx
  ShapeSchema_gp_Ax2d.cxx
  ShapeSchema_gp_Ax3.cxx
  ShapeSchema_gp_Circ2d.cxx
  ShapeSchema_gp_Dir2d.cxx
  ShapeSchema_gp_Dir.cxx
  ShapeSchema_gp_Lin2d.cxx
  ShapeSchema_gp_Mat2d.cxx
  ShapeSchema_gp_Mat.cxx
  ShapeSchema_gp_Pnt2d.cxx
  ShapeSchema_gp_Pnt.cxx
  ShapeSchema_gp_Trsf2d.cxx
  ShapeSchema_gp_Trsf.cxx
  ShapeSchema_gp_Vec2d.cxx
  ShapeSchema_gp_Vec.cxx
  ShapeSchema_gp_XY.cxx
  ShapeSchema_gp_XYZ.cxx
  ShapeSchema_ObjMgt_ExternRef.cxx
  ShapeSchema_ObjMgt_ExternShareable.cxx
  ShapeSchema_ObjMgt_PSeqOfExtRef.cxx
  ShapeSchema_ObjMgt_SeqNodeOfPSeqOfExtRef.cxx
  ShapeSchema_PBRep_Curve3D.cxx
  ShapeSchema_PBRep_CurveOn2Surfaces.cxx
  ShapeSchema_PBRep_CurveOnClosedSurface.cxx
  ShapeSchema_PBRep_CurveOnSurface.cxx
  ShapeSchema_PBRep_CurveRepresentation.cxx
  ShapeSchema_PBRep_GCurve.cxx
  ShapeSchema_PBRep_PointOnCurve.cxx
  ShapeSchema_PBRep_PointOnCurveOnSurface.cxx
  ShapeSchema_PBRep_PointOnSurface.cxx
  ShapeSchema_PBRep_PointRepresentation.cxx
  ShapeSchema_PBRep_PointsOnSurface.cxx
  ShapeSchema_PBRep_Polygon3D.cxx
  ShapeSchema_PBRep_PolygonOnClosedSurface.cxx
  ShapeSchema_PBRep_PolygonOnClosedTriangulation.cxx
  ShapeSchema_PBRep_PolygonOnSurface.cxx
  ShapeSchema_PBRep_PolygonOnTriangulation.cxx
  ShapeSchema_PBRep_TEdge1.cxx
  ShapeSchema_PBRep_TEdge.cxx
  ShapeSchema_PBRep_TFace1.cxx
  ShapeSchema_PBRep_TFace.cxx
  ShapeSchema_PBRep_TVertex1.cxx
  ShapeSchema_PBRep_TVertex.cxx
  ShapeSchema_PCDM_Document.cxx
  ShapeSchema_PCDMShape_Document.cxx
  ShapeSchema_PColgp_FieldOfHArray1OfCirc2d.cxx
  ShapeSchema_PColgp_FieldOfHArray1OfDir2d.cxx
  ShapeSchema_PColgp_FieldOfHArray1OfDir.cxx
  ShapeSchema_PColgp_FieldOfHArray1OfLin2d.cxx
  ShapeSchema_PColgp_FieldOfHArray1OfPnt2d.cxx
  ShapeSchema_PColgp_FieldOfHArray1OfPnt.cxx
  ShapeSchema_PColgp_FieldOfHArray1OfVec2d.cxx
  ShapeSchema_PColgp_FieldOfHArray1OfVec.cxx
  ShapeSchema_PColgp_FieldOfHArray1OfXY.cxx
  ShapeSchema_PColgp_FieldOfHArray1OfXYZ.cxx
  ShapeSchema_PColgp_FieldOfHArray2OfCirc2d.cxx
  ShapeSchema_PColgp_FieldOfHArray2OfDir2d.cxx
  ShapeSchema_PColgp_FieldOfHArray2OfDir.cxx
  ShapeSchema_PColgp_FieldOfHArray2OfLin2d.cxx
  ShapeSchema_PColgp_FieldOfHArray2OfPnt2d.cxx
  ShapeSchema_PColgp_FieldOfHArray2OfPnt.cxx
  ShapeSchema_PColgp_FieldOfHArray2OfVec2d.cxx
  ShapeSchema_PColgp_FieldOfHArray2OfVec.cxx
  ShapeSchema_PColgp_FieldOfHArray2OfXY.cxx
  ShapeSchema_PColgp_FieldOfHArray2OfXYZ.cxx
  ShapeSchema_PColgp_HArray1OfCirc2d.cxx
  ShapeSchema_PColgp_HArray1OfDir2d.cxx
  ShapeSchema_PColgp_HArray1OfDir.cxx
  ShapeSchema_PColgp_HArray1OfLin2d.cxx
  ShapeSchema_PColgp_HArray1OfPnt2d.cxx
  ShapeSchema_PColgp_HArray1OfPnt.cxx
  ShapeSchema_PColgp_HArray1OfVec2d.cxx
  ShapeSchema_PColgp_HArray1OfVec.cxx
  ShapeSchema_PColgp_HArray1OfXY.cxx
  ShapeSchema_PColgp_HArray1OfXYZ.cxx
  ShapeSchema_PColgp_HArray2OfCirc2d.cxx
  ShapeSchema_PColgp_HArray2OfDir2d.cxx
  ShapeSchema_PColgp_HArray2OfDir.cxx
  ShapeSchema_PColgp_HArray2OfLin2d.cxx
  ShapeSchema_PColgp_HArray2OfPnt2d.cxx
  ShapeSchema_PColgp_HArray2OfPnt.cxx
  ShapeSchema_PColgp_HArray2OfVec2d.cxx
  ShapeSchema_PColgp_HArray2OfVec.cxx
  ShapeSchema_PColgp_HArray2OfXY.cxx
  ShapeSchema_PColgp_HArray2OfXYZ.cxx
  ShapeSchema_PColgp_HSequenceOfDir.cxx
  ShapeSchema_PColgp_HSequenceOfPnt.cxx
  ShapeSchema_PColgp_HSequenceOfVec.cxx
  ShapeSchema_PColgp_HSequenceOfXYZ.cxx
  ShapeSchema_PColgp_SeqNodeOfHSequenceOfDir.cxx
  ShapeSchema_PColgp_SeqNodeOfHSequenceOfPnt.cxx
  ShapeSchema_PColgp_SeqNodeOfHSequenceOfVec.cxx
  ShapeSchema_PColgp_SeqNodeOfHSequenceOfXYZ.cxx
  ShapeSchema_PCollection_HAsciiString.cxx
  ShapeSchema_PCollection_HExtendedString.cxx
  ShapeSchema_PColStd_FieldOfHArray1OfInteger.cxx
  ShapeSchema_PColStd_FieldOfHArray1OfReal.cxx
  ShapeSchema_PColStd_FieldOfHArray2OfReal.cxx
  ShapeSchema_PColStd_HArray1OfInteger.cxx
  ShapeSchema_PColStd_HArray1OfReal.cxx
  ShapeSchema_PColStd_HArray2OfReal.cxx
  ShapeSchema_PGeom2d_AxisPlacement.cxx
  ShapeSchema_PGeom2d_BezierCurve.cxx
  ShapeSchema_PGeom2d_BoundedCurve.cxx
  ShapeSchema_PGeom2d_BSplineCurve.cxx
  ShapeSchema_PGeom2d_CartesianPoint.cxx
  ShapeSchema_PGeom2d_Circle.cxx
  ShapeSchema_PGeom2d_Conic.cxx
  ShapeSchema_PGeom2d_Curve.cxx
  ShapeSchema_PGeom2d_Direction.cxx
  ShapeSchema_PGeom2d_Ellipse.cxx
  ShapeSchema_PGeom2d_Geometry.cxx
  ShapeSchema_PGeom2d_Hyperbola.cxx
  ShapeSchema_PGeom2d_Line.cxx
  ShapeSchema_PGeom2d_OffsetCurve.cxx
  ShapeSchema_PGeom2d_Parabola.cxx
  ShapeSchema_PGeom2d_Point.cxx
  ShapeSchema_PGeom2d_Transformation.cxx
  ShapeSchema_PGeom2d_TrimmedCurve.cxx
  ShapeSchema_PGeom2d_Vector.cxx
  ShapeSchema_PGeom2d_VectorWithMagnitude.cxx
  ShapeSchema_PGeom_Axis1Placement.cxx
  ShapeSchema_PGeom_Axis2Placement.cxx
  ShapeSchema_PGeom_AxisPlacement.cxx
  ShapeSchema_PGeom_BezierCurve.cxx
  ShapeSchema_PGeom_BezierSurface.cxx
  ShapeSchema_PGeom_BoundedCurve.cxx
  ShapeSchema_PGeom_BoundedSurface.cxx
  ShapeSchema_PGeom_BSplineCurve.cxx
  ShapeSchema_PGeom_BSplineSurface.cxx
  ShapeSchema_PGeom_CartesianPoint.cxx
  ShapeSchema_PGeom_Circle.cxx
  ShapeSchema_PGeom_ConicalSurface.cxx
  ShapeSchema_PGeom_Conic.cxx
  ShapeSchema_PGeom_Curve.cxx
  ShapeSchema_PGeom_CylindricalSurface.cxx
  ShapeSchema_PGeom_Direction.cxx
  ShapeSchema_PGeom_ElementarySurface.cxx
  ShapeSchema_PGeom_Ellipse.cxx
  ShapeSchema_PGeom_Geometry.cxx
  ShapeSchema_PGeom_Hyperbola.cxx
  ShapeSchema_PGeom_Line.cxx
  ShapeSchema_PGeom_OffsetCurve.cxx
  ShapeSchema_PGeom_OffsetSurface.cxx
  ShapeSchema_PGeom_Parabola.cxx
  ShapeSchema_PGeom_Plane.cxx
  ShapeSchema_PGeom_Point.cxx
  ShapeSchema_PGeom_RectangularTrimmedSurface.cxx
  ShapeSchema_PGeom_SphericalSurface.cxx
  ShapeSchema_PGeom_Surface.cxx
  ShapeSchema_PGeom_SurfaceOfLinearExtrusion.cxx
  ShapeSchema_PGeom_SurfaceOfRevolution.cxx
  ShapeSchema_PGeom_SweptSurface.cxx
  ShapeSchema_PGeom_ToroidalSurface.cxx
  ShapeSchema_PGeom_Transformation.cxx
  ShapeSchema_PGeom_TrimmedCurve.cxx
  ShapeSchema_PGeom_Vector.cxx
  ShapeSchema_PGeom_VectorWithMagnitude.cxx
  ShapeSchema_PMMgt_PManaged.cxx
  ShapeSchema_PPoly_FieldOfHArray1OfTriangle.cxx
  ShapeSchema_PPoly_HArray1OfTriangle.cxx
  ShapeSchema_PPoly_Polygon2D.cxx
  ShapeSchema_PPoly_Polygon3D.cxx
  ShapeSchema_PPoly_PolygonOnTriangulation.cxx
  ShapeSchema_PPoly_Triangle.cxx
  ShapeSchema_PPoly_Triangulation.cxx
  ShapeSchema_PTopLoc_Datum3D.cxx
  ShapeSchema_PTopLoc_ItemLocation.cxx
  ShapeSchema_PTopLoc_Location.cxx
  ShapeSchema_PTopoDS_Compound.cxx
  ShapeSchema_PTopoDS_CompSolid.cxx
  ShapeSchema_PTopoDS_Edge.cxx
  ShapeSchema_PTopoDS_Face.cxx
  ShapeSchema_PTopoDS_FieldOfHArray1OfHShape.cxx
  ShapeSchema_PTopoDS_FieldOfHArray1OfShape1.cxx
  ShapeSchema_PTopoDS_HArray1OfHShape.cxx
  ShapeSchema_PTopoDS_HArray1OfShape1.cxx
  ShapeSchema_PTopoDS_HShape.cxx
  ShapeSchema_PTopoDS_Shape1.cxx
  ShapeSchema_PTopoDS_Shell.cxx
  ShapeSchema_PTopoDS_Solid.cxx
  ShapeSchema_PTopoDS_TCompound1.cxx
  ShapeSchema_PTopoDS_TCompound.cxx
  ShapeSchema_PTopoDS_TCompSolid1.cxx
  ShapeSchema_PTopoDS_TCompSolid.cxx
  ShapeSchema_PTopoDS_TEdge1.cxx
  ShapeSchema_PTopoDS_TEdge.cxx
  ShapeSchema_PTopoDS_TFace1.cxx
  ShapeSchema_PTopoDS_TFace.cxx
  ShapeSchema_PTopoDS_TShape1.cxx
  ShapeSchema_PTopoDS_TShape.cxx
  ShapeSchema_PTopoDS_TShell1.cxx
  ShapeSchema_PTopoDS_TShell.cxx
  ShapeSchema_PTopoDS_TSolid1.cxx
  ShapeSchema_PTopoDS_TSolid.cxx
  ShapeSchema_PTopoDS_TVertex1.cxx
  ShapeSchema_PTopoDS_TVertex.cxx
  ShapeSchema_PTopoDS_TWire1.cxx
  ShapeSchema_PTopoDS_TWire.cxx
  ShapeSchema_PTopoDS_Vertex.cxx
  ShapeSchema_PTopoDS_Wire.cxx
  ShapeSchema_Standard_Persistent.cxx
  )

# --- rules ---

ADD_LIBRARY(TKShapeSchema ${GEOM_SOURCES})
TARGET_LINK_LIBRARIES(TKShapeSchema ${_link_LIBRARIES})
INSTALL(TARGETS TKShapeSchema EXPORT ${PROJECT_NAME}TargetGroup DESTINATION ${SALOME_INSTALL_LIBS})

INSTALL(FILES ${GEOM_HEADERS} DESTINATION ${SALOME_INSTALL_HEADERS})
